# Tools

./: .gitignore
CG/CS2UnityCGmerge/: ATXDiffMerge.py
CG/Integrate/: PNG_integrate.py
CG/SimpleCGmerge/: CGmerge.py  mkdir_diff.bat
CHSHOOK/: .gitignore  CHSHOOK.sln
CHSHOOK/CHSDLL/: CHSDLL.vcxproj  CHSDLL.vcxproj.filters  FontHook.cpp  FontHook.h  Management.h  WindowHook.cpp  WindowHook.h  dllmain.cpp
CHSHOOK/CHSHOOKLoader/: CHSHOOKLoader.cpp  CHSHOOKLoader.vcxproj  CHSHOOKLoader.vcxproj.filters
ExHIBIT/: .gitignore  CMakeLists.txt  README.md
ExHIBIT/src/: dllmain.cpp  version.h
FkCxdec/: .gitignore  FkCxdec.slnx  README.md
FkCxdec/Hijack/: version.h
FkCxdec/detours/: detours.h
FkCxdec/version/: TVP.cpp  TVP.h  Utils.h  dllmain.cpp  version.vcxproj  version.vcxproj.filters
GenHxnamelst/: GenHxnamelst.py
Naninovel/: JsonRead.go  go.mod
Naninovel/struct/: struct.go
RegistryByPass/: RegistryByPass.reg
RenpyGO/: DumprpyText.go  go.mod
RenpyGO/string/: Utils.go
SJIS2UTF8/: .gitignore  CMakeLists.txt  README.md
SJIS2UTF8/src/: SJIS2UTF8.cpp
ScnJsonParser/: .gitignore  CMakeLists.txt
ScnJsonParser/src/: README.md  ScnJson.h  ScnParse.cpp  ScnParse.h
ShiinaRioKeyFind/: .gitignore  ShiinaRioKeyFind.cpp  ShiinaRioKeyFind.sln  ShiinaRioKeyFind.vcxproj  ShiinaRioKeyFind.vcxproj.filters
TLGQoi/: .gitignore  TLGQoi.slnx
TLGQoi/TLGQoi/: Lz4Stream.cs  Program.cs  QoiDecoder.cs  ResImg.cs  TLGQoi.csproj
TextSubstitution/: TextSubstitution.py  hanzi2kanji_table.txt
pt2decode/: .gitignore  go.mod  main.go  ptlzss.go  struct.go  utils.go
